# torch-poisson-solver

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
tests/: conftest.py
tests/components/factory/: test_device_factory.py  test_particle_mask_factory.py  test_two_dim_field_factory.py
tests/data_structures/: test_config.py  test_two_dim_particle_shape_position.py
torch_poisson_solver/components/: trainer.py
torch_poisson_solver/components/factory/: __init__.py  device_factory.py  particle_mask_factory.py  template_factory.py  template_scalar_field_factory.py  two_dim_field_factory.py  two_dim_particle_mask_factory.py
torch_poisson_solver/components/operators/: __init__.py  config_loader.py
torch_poisson_solver/components/solver/: __init__.py  naive_poisson_solver.py  solver_template.py
torch_poisson_solver/data_structures/: __init__.py  config.py  slover_config.py  two_dim_field.py  two_dim_particle_shape_position.py
torch_poisson_solver/io/: __init__.py  config_s3.py  io_template.py  onnx_s3.py  save_image_s3.py  transfer_s3.py
torch_poisson_solver/models/: two_dimensional_matrix_product.py
