[tool.poetry]
name = "torch-poisson-solver"
version = "0.1.0"
description = ""
authors = ["sakairi-nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]
readme = "README.md"
packages = [{include = "torch_poisson_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
tqdm = "^4.65.0"
boto3 = "^1.26.140"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
